# tp_cpp_hw1

./: .gitignore  CMakeLists.txt  README.md  coverage  main.c  ration.txt  report
.github/workflows/: check.yml
code_coverage_report/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
code_coverage_report/c++/9/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  tuple.func-sort-c.html  tuple.func.html  tuple.gcov.html
code_coverage_report/c++/9/bits/: alloc_traits.h.func-sort-c.html  alloc_traits.h.func.html  alloc_traits.h.gcov.html  basic_string.h.func-sort-c.html  basic_string.h.func.html  basic_string.h.gcov.html  basic_string.tcc.func-sort-c.html  basic_string.tcc.func.html  basic_string.tcc.gcov.html  char_traits.h.func-sort-c.html  char_traits.h.func.html  char_traits.h.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  move.h.func-sort-c.html  move.h.func.html  move.h.gcov.html  stl_iterator_base_funcs.h.func-sort-c.html  stl_iterator_base_funcs.h.func.html  stl_iterator_base_funcs.h.gcov.html  stl_iterator_base_types.h.func-sort-c.html  stl_iterator_base_types.h.func.html  stl_iterator_base_types.h.gcov.html  unique_ptr.h.func-sort-c.html  unique_ptr.h.func.html  unique_ptr.h.gcov.html
code_coverage_report/c++/9/ext/: alloc_traits.h.func-sort-c.html  alloc_traits.h.func.html  alloc_traits.h.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  new_allocator.h.func-sort-c.html  new_allocator.h.func.html  new_allocator.h.gcov.html  type_traits.h.func-sort-c.html  type_traits.h.func.html  type_traits.h.gcov.html
code_coverage_report/gtest/: gtest-message.h.func-sort-c.html  gtest-message.h.func.html  gtest-message.h.gcov.html  gtest-printers.h.func-sort-c.html  gtest-printers.h.func.html  gtest-printers.h.gcov.html  gtest.h.func-sort-c.html  gtest.h.func.html  gtest.h.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
code_coverage_report/gtest/internal/: gtest-internal.h.func-sort-c.html  gtest-internal.h.func.html  gtest-internal.h.gcov.html  gtest-port.h.func-sort-c.html  gtest-port.h.func.html  gtest-port.h.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
code_coverage_report/home/zaynutdin/CLionProjects/tp_cpp_hw1/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  main.c.func-sort-c.html  main.c.func.html  main.c.gcov.html
code_coverage_report/home/zaynutdin/CLionProjects/tp_cpp_hw1/src/: food.c.func-sort-c.html  food.c.func.html  food.c.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  utils.c.func-sort-c.html  utils.c.func.html  utils.c.gcov.html
code_coverage_report/home/zaynutdin/CLionProjects/tp_cpp_hw1/tests/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  tests.cpp.func-sort-c.html  tests.cpp.func.html  tests.cpp.gcov.html
include/: food.h  utils.h
infer-out/: .infer_runstate.json  logs
project/: main.c
project/include/: food.h  utils.h
project/src/: food.c  utils.c
report2/: index-sort-f.html  index-sort-l.html  index.html
report2/src/: food.c.func-sort-c.html  food.c.func.html  food.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html  utils.c.func-sort-c.html  utils.c.func.html  utils.c.gcov.html
scripts/: build.sh  clang-formating-refactor.sh  clang-formating.sh  gen-cov.sh  linters.sh  run-tests.sh
scripts/tmp/: formated-file
src/: food.c  utils.c
tests/: CMakeLists.txt  tests.cpp
tmp/: formated-file
